# case-insensitive-hashmap

./: Cargo.toml  README.md
examples/: ex1.rs
src/: lib.rs
